fix: mobile view overflow when switching between tabs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow-x: clip;
 }
 
 @layer utilities {
